# ics-hu-llm

./: .env.ics-hullm.template  .gitignore  .gitmodules  Makefile  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  worker.Dockerfile
ics/: pyproject.toml
ics/ics/: implementation.py  pipi.py  worker.py
test/: code_from_anwer.py
