[project]
name = "ics"
version = "0.2.0"
authors = [
    { name="Philipp Franck", email="philipp.franck@hu-berlin.de" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "gradio_client==1.10.0",
    "pydantic>=2",
    "fastapi==0.115.12",
    "redis==5.2.1",
    "rq==2.1.0",
    "rq-dashboard==0.8.2.2"
]

[project.urls]
Homepage = "https://github.com/iqb-berlin/ics-hu-llm"

[tool.ics]
name = 'hu-llm'
mode = 'direct'
